	  behavior can be changed in the preferences.
	- Style changes in the preferences are only applied once to open
	  documents.
	- When annotating a word manually, the first reading and translation
	  are now automatically selected.
	- Fixed treatment of special characters /, @ and | in annotations
	  when saving and loading documents.
	- Changed default font sizes.
0.9.4: (2001/11/07)
	- Improved handling of reading annotations in imported text;
	  ChaSen parser can now be used with texts with reading annotations.
	- Changed annotation editor to only expand tree for selected
	  annotation. This speeds up document display and decreases
	  memory usage.
	- Added find option.
	- Added open recent menu.
	- Input focus can be switched to annotation editor with TAB key.
	- Fixed escaping of special characters in LaTeX export.
	- Enlarged text input fields in annotation editor.
	- Fixes to JGloss-WWW.
0.9.3: (2001/09/14)
	- Annotations can now have more than one reading. In a word with
	  more than one kanji substring, a reading is added for every
	  substring. Non-kanji substrings don't get a reading annotation.
	- Changed HTML generation. The generated HTML is now simpler, but
	  may not work as well as previously with browsers which don't
	  support ruby elements.
	- There are now two text parsers, the previous "Kanji" parser and
	  a parser which uses the ChaSen morphological analysis tool.
	- Manual annotation addition now displays a dialog which lets you
	  look up the annotation in the dictionaries before you add it.
	- Fixed bug where the document would sometimes scroll to a
	  different location if a reading/translation is changed.
	- Fixed document name setting in save as.
	- Fixed JJDX creation for dictionaries with more than 500.000
	  index entries.
0.9.2: (2001/08/13)
	- Added dialog for looking up words in the dictionaries.
	- Extreme speedup of EDICT lookups. The old entry match test was
	  really broken.